@@ -1,6 +1,7 @@
 Revision history for Config::App
 
 {{$NEXT}}
+        - Library directory injection during import
 
 1.02      2015-06-09 19:10:53-07:00 America/Los_Angeles
         - Small POD improvement
